[package]
name = "numaflow-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: fix when https://github.com/fede1024/rust-rdkafka/pull/756 is resolved
rdkafka = { git = "https://github.com/BulkBeing/rust-rdkafka.git", branch = "fix-curl-static-feature-flag", default-features = false, features = ["cmake-build", "tokio", "ssl-vendored", "gssapi-vendored", "sasl", "curl-static"] }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
kafka-tests = ["uuid"]
kafka-tests-utils = ["uuid"]

[lints]
workspace = true
