[package]
name = "numaflow-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38.0", default-features = false, features = ["cmake-build", "tokio", "ssl-vendored", "gssapi-vendored", "sasl", "curl", "curl-static", "zstd"] }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tokio-util.workspace = true

thiserror.workspace = true
bytes.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
kafka-tests = ["uuid"]
kafka-tests-utils = ["uuid"]

[lints]
workspace = true
