[package]
name = "numaflow-pulsar"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true

thiserror.workspace = true
chrono.workspace = true
bytes.workspace = true
serde = { version = "1.0.204", features = ["derive"] }
# Rustls doesn't allow accepting self-signed certs: https://github.com/streamnative/pulsar-rs/blob/715411cb365932c379d4b5d0a8fde2ac46c54055/src/connection.rs#L912
pulsar = {version = "6.3.1", default-features = false, features = ["tokio-rustls-runtime"]}
uuid = { workspace = true, features = ["v4"], optional = true }
tokio-stream.workspace = true

[features]
pulsar-tests = ["uuid"]
pulsar-tests-utils = ["uuid"]
