[package]
name = "numaflow-serving"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
serde = { workspace = true }
numaflow-models.workspace = true
backoff.workspace = true
rcgen = "0.13.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "2.0.8"
base64 = "0.22.1"
serde_json = "1.0.120"
trait-variant = "0.1.2"
redis = { version = "0.26.0", features = ["tokio-comp", "aio", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
