[package]
name = "numaflow-sqs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
chrono.workspace = true
thiserror.workspace = true
aws-config = "1.6.2"
aws-sdk-sqs = "1.65.0"
aws-smithy-types = "1.3.1"


[dev-dependencies]
aws-smithy-mocks-experimental = "0.2.3"
test-log = "0.2.17"