[package]
name = "numaflow-pulsar"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "forbid"

[lints.clippy]
enum_glob_use = "deny"

[dependencies]
prost = "0.11.9"
tokio = "1.41.1"
tonic = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
tracing = "0.1.40"
bincode = "1.3.3"
chrono = "0.4.38"
pulsar = "6.3.0"
bytes = "1.7.1"
thiserror = "2.0.3"
